--- a/build.gradle
+++ b/build.gradle
@@ -5,52 +5,30 @@ buildscript {
     dependencies {
         classpath "org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}"
         classpath "com.blackbaud:gradle-internal:4.+"
-        classpath "com.blackbaud:gradle-templates:3.+"
     }
 }
 
-apply plugin: "blackbaud-internal-rest"
-apply plugin: "blackbaud-templates"
+apply plugin: "blackbaud-internal"
 apply plugin: "spring-boot"
 
-allprojects {
-    apply plugin: "blackbaud-internal"
-
-    ext {
-        // used by the various gradle-templates task to determine the base service package
-        servicePackageName="com.blackbaud.roborefactor"
-
-        groovyVersion = "2.4.7"
-        lombokVersion = "1.16.18"
-        spockVersion = "1.1-groovy-2.4"
-        commonSpringBootVersion = "${springBootVersion}-3.+"
-    }
-
-    dependencies {
-        compileOnly "org.projectlombok:lombok:${lombokVersion}"
-
-        mainTestCompile "com.blackbaud:common-test:3.+"
-        mainTestCompileOnly "org.projectlombok:lombok:${lombokVersion}"
-        mainTestCompileOnly "org.codehaus.groovy:groovy-all:${groovyVersion}"
-    }
-}
-
 dependencies {
-    compile "com.blackbaud:tokens-client:3.+"
-    compile "com.blackbaud:common-spring-boot-rest:${commonSpringBootVersion}"
+    compile "com.google.guava:guava:23.0"
+    compile "com.netflix.devinsight.rewrite:rewrite-core:1.2.0"
+    compile "org.codehaus.groovy:groovy-all:2.4.15"
+    compile "org.gradle:gradle-tooling-api:2.14.1"
+    compile "org.eclipse.mylyn.github:org.eclipse.egit.github.core:2.1.5"
+    compile "com.blackbaud:common-spring-boot-rest:1.4.1.RELEASE-3.+"
+    compile files("${System.getProperty('java.home')}/../lib/tools.jar")
+    compileOnly "org.projectlombok:lombok:1.16.18"
 
-    sharedTestCompile "com.blackbaud:common-spring-boot-rest-test:${commonSpringBootVersion}"
-    sharedTestCompile "org.codehaus.groovy:groovy-all:${groovyVersion}"
-    sharedTestCompile 'cglib:cglib-nodep:2.2.2'
-    sharedTestCompile 'org.objenesis:objenesis:1.3'
-    sharedTestCompile ("org.spockframework:spock-core:${spockVersion}") {
-        exclude group: "org.codehaus.groovy"
-    }
-    sharedTestCompile ("org.spockframework:spock-spring:${spockVersion}") {
+    testCompile "com.blackbaud:common-test:3.+"
+    testCompile ("org.spockframework:spock-core:1.1-groovy-2.4") {
         exclude group: "org.codehaus.groovy"
     }
 }
 
-swagger {
-    generateSpringfoxDocs
+bootRun {
+    if ( project.hasProperty('args') ) {
+        args project.args.split(/\s+/)
+    }
 }
